# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./profiles";
 export * from "./companies";
 export * from "./jobs";
 export * from "./applications";
+export * from "./notifications";
